# mexoscope

./: .gitignore  CMakeLists.txt  README.md  mexoscope.jucer  s(M)exoscope.jucer
Source/: CMakeLists.txt  Mexoscope.cpp  Mexoscope.h  ModernLookAndFeel.cpp  ModernLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  UiTheme.h  WaveDisplay.cpp  WaveDisplay.h
